monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0120/A0120.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0120;

grammar A0120 {

  A = "a";

  interface Foo = bar:"bar" A "b";



}
